# NoteDx-API-Client

./: .coveragerc.ini  .gitignore  404.html  LICENSE  README.md  codecov.yml  example.py  index.html  mkdocs.yml  nb.ipynb  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/: codecov.yml
.github/workflows/: codecov.yml  publish.yml  test.yml
billing/: index.html
changelog/: index.html
docs/: README (1).md  README.md  SUMMARY.md  account-management.md  api-key-management.md  authentication.md  billing.md  changelog.md  curl-examples.md  error-handling.md  examples.md  faq.md  getting-started.md  index.md  introduction.md  note-generation.md  requirements.txt  sdk-reference.md  usage-management.md  webhook-management.md
docs/reference/: account.md  api-keys.md  client.md  notes.md  webhooks.md
examples/: index.html
getting-started/: index.html
notedx_sdk/: setup.py
reference/account/: index.html
reference/api-keys/: index.html
reference/client/: index.html
reference/notes/: index.html
reference/webhooks/: index.html
search/: search_index.json
src/: __init__.py
src/notedx_sdk/: __init__.py  client.py  exceptions.py
src/notedx_sdk/account/: account_manager.py
src/notedx_sdk/api_keys/: key_manager.py
src/notedx_sdk/core/: note_manager.py
src/notedx_sdk/usage/: usage_manager.py
src/notedx_sdk/webhooks/: webhook_manager.py
tests/: __init__.py  conftest.py  test_client.py
tests/unit/: __init__.py  test_create_account.py  test_helpers.py
tests/unit/account/: __init__.py  test_account_manager.py
(+8 files in other folders)
